--- a/exercise1_lee.html
+++ b/exercise1_lee.html
@@ -9,5 +9,10 @@
     <div>
         <button id="style" onclick="js_new_style()">New style</button>
     </div>
+    <script>
+        function js_new_style() {
+            document.getElementById("text").style.fontSize = "7px";
+        }
+    </script>
 </body>
 </html>
